--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <header class="page-header" role="banner">
         <h1 class="project-name">FOSMods</h1>
-        <h2 class="project-tagline">Free and Open Source Mods.</h2>
+        <h2 class="project-tagline">Free and Open Source Mods</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
