--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
         <h1 class="project-name">FOSMods</h1>
@@ -26,12 +25,20 @@
     <main id="content" class="main-content" role="main">
         {{ content }}
 
-        <hr/>
         <footer class="site-footer">
             <span class="site-footer-credits">
-                Github: <a href="https://github.com/FOSMods">FOSMods</a><br />
-                Email: <a href="mailto:contact.jaynakum@gmail.com">contact.jaynakum@gmail.com</a><br />
-                Twitter: <a href="https://twitter.com/JayNakum_">JayNakum_</a>
+                <a href="https://github.com/FOSMods" target="_blank">
+                    <img alt="GitHub"
+                        src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" />
+                </a>
+                <a href="https://www.twitter.com/JayNakum_" target="_blank">
+                    <img alt="Twitter"
+                        src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" />
+                </a>
+                <a href="mailto:contact.jaynakum@gmail.com" target="_blank">
+                    <img alt="Gmail"
+                        src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" />
+                </a>
             </span>
         </footer>
     </main>
