--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
         {{ content }}
 
         <footer class="site-footer">
+            <h1>Connect</h1>
             <span class="site-footer-credits">
                 <a href="https://github.com/FOSMods" target="_blank">
                     <img alt="GitHub"
