that was not an improvement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+
+    <header class="page-header">
+        <h1 class="project-name">FOSMods</h1>
+        <h2 class="project-tagline">Free and Open Source Mods</h2>
+    </header>
+
     <main id="content" class="main-content" role="main">
         {{ content }}
 
