what does this do?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header class="page-header">
+    <header class="page-header" role="banner">
         <h1 class="project-name">FOSMods</h1>
         <h2 class="project-tagline">Free and Open Source Mods</h2>
     </header>
