--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -15,14 +15,13 @@
   <body>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">FOSMods / Games</h1>
+        <a href="{{ site.github.repository_url }}" class="btn">Contribute</a>
     </header>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
 
       <footer class="site-footer">
-        <h3>Your favourite game isn't here? <a href="https://github.com/FOSMods/FOSMods/issues/new?assignees=&labels=Game+Request&template=game-request.md&title=Game+Request" class="btn">Request Now!</a></h3>>
         <h1>Connect</h1>
         <span class="site-footer-credits">
             <a href="https://github.com/FOSMods" target="_blank">
