--- a/_layouts/games.html
+++ b/_layouts/games.html
@@ -26,8 +26,8 @@
 
     <footer class="site-footer">
       <h3>Your favourite game isn't here? <a
-          href="https://github.com/FOSMods/FOSMods/issues/new?assignees=&labels=Game+Request&template=game-request.md&title=Game+Request"
-          class="btn">Request Now!</a></h3>>
+          href="https://github.com/FOSMods/FOSMods/issues/new?assignees=&labels=Game+Request&template=game-request.md&title=Game+Request">Request
+          Now!</a></h3>
       <h1>Connect</h1>
       <span class="site-footer-credits">
         <a href="https://github.com/FOSMods" target="_blank">
