--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -18,7 +18,7 @@
 <body>
 
   <header class="page-header" role="banner">
-    <a href="{{ site.github.repository_url }}" class="btn">Contribute</a>
+    <a href="{{ site.github.repository_url }}" class="btn">Contribute</a> your own mod.
   </header>
 
   <main id="content" class="main-content" role="main">
