--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+  
+  <header class="page-header" role="banner">
+      
+  </header>
+  
   <main id="content" class="main-content" role="main">
     {{ content }}
 
