no need for custom css

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -25,6 +25,7 @@
     {{ content }}
 
     <footer class="site-footer">
+      <h3><a href="https://github.com/FOSMods/Minecraft">Contribute</a> your own mod.</h3>
       <h1>Connect</h1>
       <span class="site-footer-credits">
         <a href="https://github.com/FOSMods" target="_blank">
