added an about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
                         src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" />
                 </a>
             </span>
+            <h4><a href="../about">About Us</a></h4>
         </footer>
     </main>
 </body>
