--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -19,7 +19,7 @@
   
   <header class="page-header" role="banner">
     <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-    <a href="{{ 'https://github.com/FOSMods/' | append: page.title }}">Contribute</a>
+    <a href="{{ 'https://github.com/FOSMods/' | append: page.title }}" class="btn">Contribute</a>
   </header>
   
   <main id="content" class="main-content" role="main">
