--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -18,7 +18,7 @@
 <body>
   
   <header class="page-header" role="banner">
-    <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+    <h1 class="project-name">FOSMods / {{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     <a href="{{ 'https://github.com/FOSMods/' | append: page.title }}" class="btn">Contribute</a>
   </header>
   
